# v2verifier

./: .gitignore  .travis.yml  AttackerWave.py  CMakeLists.txt  Doxyfile  GPSVehicle.py  GUI.py  IEEE1609Dot2Data_8hpp_source.html  LICENSE  Local.py  LocalVehicle.py  NOTICE  README.md  Receiver.py  Recorder.py  Remote.py  RemoteVehicle.py  ReplayAttacker.py  Signature_8hpp_source.html  SignedDataPayload_8hpp.html  ToBeSignedData_8hpp_source.html  UnsecuredData_8hpp.html  Utility.py  V2XMessage_8hpp.html  Vehicle.cpp  Vehicle.py  Vehicle_8hpp_source.html  Verifier.py  WavePacketBuilder.py  X1609.py  block_editing_notes.txt  bsm.py  c_v2x_receiver.py  changelog.md  classEcdsaP256Signature-members.html  classIEEE1609Dot2Data-members.html  classIEEE1609Dot2Data.html  classSignature.html  classSignedData-members.html  classSignedDataPayload-members.html  (+74 more)
GUI/: App.py
PTV/: parse_vissim_output.py
archive/: LICENSE  README.md  attacker_path  header  pcapParser.py  replay_transmitter.py  txMain.py  wifi_tx.py
authGRCs/: DEMOfastECCsignTX.grc  backupverify.grc  eccSignHackRFTX.grc  top_block.py
authscripts/: generateECCkey.py  simAuth.py
coords/: coords_1  coords_2  coords_3  coords_4  coords_5
cv2x/: CMakeLists.txt  README.md  sf_config.csv
cv2x-traffic-generator/cv2x_traffic_generator/: CMakeLists.txt  cv2x_traffic_generator.c
docs/: Doxyfile
eel test/: hello.py
gps_gui_files/: X1609.py  gui-eel.py
gr-ieee-files/: decode_mac.cc  sync_long.cc  viterbi_decoder.cc
grc/: reactive_jammer.grc  v2verifier_loopback.grc  wifi_rx.grc  wifi_tx.grc
gui/: GUI.py  main.html
gui-new/: main.html
html/: EccP256CurvePoint_8hpp.html  EccP256CurvePoint_8hpp_source.html  EcdsaP256Signature_8hpp.html  EcdsaP256Signature_8hpp_source.html  HeaderInfo_8hpp.html  HeaderInfo_8hpp_source.html  IEEE1609Dot2Content_8hpp.html  IEEE1609Dot2Content_8hpp_source.html  IEEE1609Dot2DataTypes_8hpp.html  IEEE1609Dot2DataTypes_8hpp_source.html  IEEE1609Dot2Data_8hpp.html  IEEE1609Dot2_8hpp_source.html  J2735BSM_8hpp_source.html  Log_8h_source.html  Signature_8hpp.html  SignedDataPayload_8hpp.html  SignedDataPayload_8hpp_source.html  SignedData_8hpp.html  SignedData_8hpp_source.html  SignerIdentifier_8hpp.html  SignerIdentifier_8hpp_source.html  ToBeSignedData_8hpp.html  UnsecuredData_8hpp.html  UnsecuredData_8hpp_source.html  Utility_8hpp.html  Utility_8hpp_source.html  V2VSecurity_8cpp.html  V2VSecurity_8hpp.html  V2VSecurity_8hpp_source.html  V2XMessage_8hpp.html  V2XMessage_8hpp_source.html  Vehicle_8cpp.html  Vehicle_8hpp.html  Vehicle_8hpp_source.html  annotated.html  bug.html  classEccP256CurvePoint-members.html  classEccP256CurvePoint.html  classEcdsaP256Signature.html  classHeaderInfo-members.html  (+83 more)
include/: BasicSafetyMessage.h  CertificateBase.h  HashAlgorithm.h  HeaderInfo.h  Ieee1609Dot2Content.h  Ieee1609Dot2Data.h  OctetString.h  SignedData.h  SignedDataPayload.h  SignerIdentifier.h  ToBeSignedCertificate.h  ToBeSignedData.h  UnsecuredData.h  Vehicle.h  arguments.h  bsm.h  certificates.h  ieee16092.h  threading.h  v2vcrypto.h
latex/: EccP256CurvePoint_8hpp.tex  EcdsaP256Signature_8hpp.tex  HeaderInfo_8hpp.tex  IEEE1609Dot2Content_8hpp.tex  IEEE1609Dot2DataTypes_8hpp.tex  IEEE1609Dot2Data_8hpp.tex  Signature_8hpp.tex  SignedDataPayload_8hpp.tex  SignedData_8hpp.tex  SignerIdentifier_8hpp.tex  ToBeSignedData_8hpp.tex  UnsecuredData_8hpp.tex  Utility_8hpp.tex  V2VSecurity_8cpp.tex  V2VSecurity_8hpp.tex  V2XMessage_8hpp.tex  Vehicle_8cpp.tex  Vehicle_8hpp.tex  annotated.tex  bug.tex  classEccP256CurvePoint.tex  classEcdsaP256Signature.tex  classHeaderInfo.eps  classHeaderInfo.tex  classIEEE1609Dot2Content.eps  classIEEE1609Dot2Content.tex  classIEEE1609Dot2Data.eps  classIEEE1609Dot2Data.tex  classJ2735BSM.eps  classJ2735BSM.tex  classLogger_1_1Log.tex  classSignature.eps  classSignature.tex  classSignedData.eps  classSignedData.tex  classSignedDataPayload.eps  classSignedDataPayload.tex  classSignerIdentifier.eps  classSignerIdentifier.tex  classToBeSignedData.eps  (+35 more)
logger/: CMakeLists.txt  Log.cpp  Log.h
misc_files/: GPSVehicle.py  wifi_rx_gps.py
my_first_sim/: MyFirstSim.err  MyFirstSim.inp0  MyFirstSim.inpx  MyFirstSim.layx  MyFirstSim_013.fzp  data.txt
open-street-map-gui/: gui.py  gui_test.py  osm-gui.css  osm-gui.html
osm/: test.html  test.js
osm-gui/: README.md  Utility.py  Vehicle.py  coordinate_trace.csv  main.py  requirements.txt
python_guis/: TkGUI.py  WebGUI.py
replay_attack/: replay_attack.py
search/: all_1.js  all_2.js  all_5.js  all_7.js  all_c.js  all_d.js  classes_1.js  classes_6.js  enums_0.js  enums_2.js  files_1.js  files_4.js  files_5.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_1.js  searchdata.js
src/: BasicSafetyMessage.cpp  CMakeLists.txt  CertificateBase.cpp  HeaderInfo.cpp  (+14 more)
v2verifier-app/: CMakeLists.txt
v2verifier-app/include/: V2VSecurity.hpp  Vehicle.hpp  test.hpp
v2verifier-app/src/: V2VSecurity.cpp  Vehicle.cpp  main.cpp  test.cpp
v2verifier-app/test/: CMakeLists.txt  test_test.cpp
v2verifier_cpp/: CMakeLists.txt  Vehicle.cpp  Vehicle.h  VehicleUtil.cpp  VehicleUtil.h  certificates.h  config.json  ieee16092.h  main.cpp  v2vcrypto.cpp  v2vcrypto.h
v2verifier_cpp/include/: Vehicle.h  arguments.h  bsm.h
v2xmessage/: CMakeLists.txt
v2xmessage/include/: EccP256CurvePoint.hpp  EcdsaP256Signature.hpp  HeaderInfo.hpp  IEEE1609Dot2.hpp  IEEE1609Dot2Content.hpp  IEEE1609Dot2Data.hpp  IEEE1609Dot2DataTypes.hpp  J2735BSM.hpp  Signature.hpp  SignedData.hpp  SignedDataPayload.hpp  SignerIdentifier.hpp  ToBeSignedData.hpp  UnsecuredData.hpp  Utility.hpp  V2XMessage.hpp  V2XMessageService.hpp  test.hpp
v2xmessage/src/: IEEE1609Dot2Content.cpp  J2735BSM.cpp  V2XMessage.cpp  V2XMessageService.cpp  test.cpp
v2xmessage/test/: CMakeLists.txt  EccP256CurvePoint_TEST.cpp  EcdsaP256Signature_TEST.cpp  HeaderInfo_TEST.cpp  IEEE16092Data_TEST.cpp  IEEE1609Dot2Content_TEST.cpp  IEEE1609Dot2Data_TEST.cpp  Signature_TEST.cpp  SignedData_TEST.cpp  SignerIdentifier_TEST.cpp  ToBeSignedData_TEST.cpp
(+380 files in other folders)
